--- a/css/styles.css
+++ b/css/styles.css
@@ -7871,7 +7871,8 @@ textarea.form-control-lg {
 }
 
 .p-4 {
-  padding: 1.5rem !important;
+  padding: 1rem !important;
+  text-align::center;
 }
 
 .p-5 {
